--- a/tasks/nodejs/deploy.yml
+++ b/tasks/nodejs/deploy.yml
@@ -87,6 +87,19 @@
   tags:
     - steamengine_deploy_nodejs
 
+- name: Deploy .env file
+  ansible.builtin.include_tasks:
+    file: "./deploy_env_file.yml"
+    apply:
+      tags:
+        - steamengine_deploy
+        - steamengine_deploy_nodejs
+  when:
+    - steamengine_node_env is defined and steamengine_node_env
+    - new_build_to_deploy
+  tags:
+    - always
+
 - name: Fix permissions after updating source
   ansible.builtin.command: "/{{ steamengine_project_name }}/bin/steamengine fixpermissions"
   when: new_build_to_deploy
