--- a/vars/main.yml
+++ b/vars/main.yml
@@ -4,7 +4,7 @@
 steamengine_wrapper_scripts_cron: |
   {% set l = [] %}
   {% for cron in steamengine_crons %}
-  {% set _ = l.append({'name': cron.name, 'description': cron.description, 'command': cron.command, 'run_as_app_user': cron.run_as_app_user | default(omit), 'run_in_project_root_path_web': cron.run_in_project_root_path_web | default(omit)}) %}
+  {% set _ = l.append({'name': cron.name, 'description': cron.description, 'command': cron.command, 'run_as_app_user': cron.run_as_app_user | default(false), 'run_in_project_root_path_web': cron.run_in_project_root_path_web | default(false)}) %}
   {% endfor %}
   {{ l }}
 
